package PokeArenaNetwork;

public class PokeArenaWinPacket extends PokeArenaPacket {

    public PokeArenaWinPacket() {
        super(PokeArenaPacketType.WIN);
    }

}
